--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="logo">Logo</div>
+            <ul>
+                <li class="link-one">header link one</li>
+                <li class="link-two">header link two</li>
+                <li class="link-three">header link three</li>
+            </ul>
+        </div>
+        <div class="hero">
+         <div class="hero-box">
+          <div class="hero-text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+          </div>
+            <img src="https://cdn.pixabay.com/photo/2019/07/03/10/16/pug-4314106_1280.jpg" alt="this is an image" height="150px" width="auto">
+         </div>
+          
+        </div>
 
+        <div class="info">
+            <h2>Some random information.</h2>
+            <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub1">This is an image subscript</div>
+            <img src="https://cdn.pixabay.com/photo/2014/11/30/14/11/cat-551554_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub2">This is also an image subscript</div>
+            <img src="https://cdn.pixabay.com/photo/2014/05/20/21/20/bird-349026_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub3">This is the third image subscript in a row</div>
+            <img src="https://cdn.pixabay.com/photo/2015/11/17/13/13/bulldog-1047518_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub4">This is the last and final image subscript</div>
+        </div>
+        <div class="quotebox">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quoter"><strong>-Armaan Sandhu 1942</strong></div>
+        </div>
+        <div class="call-to-act">
+            <div class="callbox">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right there!</p>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <footer>
+            Copyright © Armaan Sandhu 2023
+        </footer>
+    </div>
+</body>
+</html>
