--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <div class="logo">Logo</div>
+     <div class="header">
+        <div class="top-page">
+            <div class="left-side">Header Logo</div>
             <ul>
+             <div class="right-side">
                 <li class="link-one">header link one</li>
                 <li class="link-two">header link two</li>
                 <li class="link-three">header link three</li>
+             </div>
             </ul>
         </div>
         <div class="hero">
-         <div class="hero-box">
+            
           <div class="hero-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+            <h2 class = "hero-head">This website is awesome</h2>
+            <p class ="textbox">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class ="cool-button">Sign up</button>
           </div>
-            <img src="https://cdn.pixabay.com/photo/2019/07/03/10/16/pug-4314106_1280.jpg" alt="this is an image" height="150px" width="auto">
-         </div>
-          
+            <img class = hero-img src="https://cdn.pixabay.com/photo/2019/07/03/10/16/pug-4314106_1280.jpg" alt="this is an image" height="250px" width="950px">
+     </div>
         </div>
+    </div>
 
         <div class="info">
             <h2>Some random information.</h2>
