--- a/index.html
+++ b/index.html
@@ -32,25 +32,38 @@
     </div>
 
         <div class="info">
-            <h2>Some random information.</h2>
-            <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_1280.jpg" alt="" height="60px" width="60px">
-            <div class="sub1">This is an image subscript</div>
-            <img src="https://cdn.pixabay.com/photo/2014/11/30/14/11/cat-551554_1280.jpg" alt="" height="60px" width="60px">
-            <div class="sub2">This is also an image subscript</div>
-            <img src="https://cdn.pixabay.com/photo/2014/05/20/21/20/bird-349026_1280.jpg" alt="" height="60px" width="60px">
-            <div class="sub3">This is the third image subscript in a row</div>
-            <img src="https://cdn.pixabay.com/photo/2015/11/17/13/13/bulldog-1047518_1280.jpg" alt="" height="60px" width="60px">
-            <div class="sub4">This is the last and final image subscript</div>
+            <h2 class="info-top">Some random information.</h2>
+    <div class="image-container">
+        <div class="images">
+            <img class ="circly-img" src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub">This is some subtext or illustration under an image</div>
         </div>
+        <div class="images">
+            <img class ="circly-img" src="https://cdn.pixabay.com/photo/2014/11/30/14/11/cat-551554_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub">This is some subtext or illustration under an image</div>
+        </div>
+        <div class="images">
+            <img class ="circly-img" src="https://cdn.pixabay.com/photo/2014/05/20/21/20/bird-349026_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub">This is some subtext or illustration under an image</div>
+        </div>
+        <div class="images">
+            <img class ="circly-img" src="https://cdn.pixabay.com/photo/2015/11/17/13/13/bulldog-1047518_1280.jpg" alt="" height="60px" width="60px">
+            <div class="sub">This is some subtext or illustration under an image</div>
+        </div>
+        </div>
+    </div>
         <div class="quotebox">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
             <div class="quoter"><strong>-Armaan Sandhu 1942</strong></div>
         </div>
         <div class="call-to-act">
             <div class="callbox">
+             <div class="call-text">
                 <h3>Call to action! It's time!</h3>
+            
                 <p>Sign up for our product by clicking that button right there!</p>
-                <button>Sign up</button>
+             </div>
+                <button class="signup">Sign up</button>
             </div>
         </div>
         <footer>
